--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mime": "^3.0.0",
     "sharp": "^0.30.3",
     "uuid": "^8.3.2"
   }
